[gd_scene load_steps=2 format=3 uid="uid://dg3x68enha2dk"]

[ext_resource type="Script" path="res://tempdeathscreen.gd" id="1_5lmrr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lmrr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -93.0
offset_right = 176.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You Died"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to menu"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
